fix: change z-index of gallery

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -601,7 +601,7 @@ section {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 5;
+  z-index: 200;
   opacity: 0;
   pointer-events: none;
   transition: all 0.25s ease-in-out;
@@ -1286,11 +1286,11 @@ section {
     }
   }
 
-  .modal-close {
-    z-index: 11!important;
-    top: 5rem!important;
+  // .modal-close {
+  //   z-index: 11!important;
+  //   top: 5rem!important;
     
-  }
+  // }
 
   .hero__caption {
     position: absolute;
